adding flags .c and flags.h to save user preferences in the registry
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@405 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -260,13 +260,13 @@ BEGIN
     GROUPBOX        "Syntax Highlighting",IDC_STATIC,7,70,176,106
     PUSHBUTTON      "Choose ...",IDC_CHOOSE_OPCODE,126,81,50,14
     CONTROL         "",IDC_STATIC_OPCODE,"Static",SS_OWNERDRAW | WS_GROUP,71,81,50,14
-    LTEXT           "Opcode",IDC_STATIC,15,86,26,8
+    LTEXT           "OPCODE",IDC_OPCODE_TXT,15,86,29,8
     PUSHBUTTON      "Choose ...",IDC_CHOOSE_OPERROR,126,99,50,14
     CONTROL         "",IDC_STATIC_OPERROR,"Static",SS_OWNERDRAW | WS_GROUP,71,99,50,14
-    LTEXT           "Opcode Error",IDC_STATIC,15,103,44,8
+    LTEXT           "ERROR",IDC_ERROR_TXT,15,103,24,8
     PUSHBUTTON      "Choose ...",IDC_CHOOSE_REGISTER,126,117,50,14
     CONTROL         "",IDC_STATIC_REGISTER,"Static",SS_OWNERDRAW | WS_GROUP,71,117,50,14
-    LTEXT           "Register",IDC_STATIC,15,120,28,8
+    LTEXT           "$Register",IDC_STATIC,15,120,32,8
     PUSHBUTTON      "Choose ...",IDC_CHOOSE_SYMBOL,126,135,50,14
     CONTROL         "",IDC_STATIC_SYMBOL,"Static",SS_OWNERDRAW | WS_GROUP,71,135,50,14
     LTEXT           "Symbol",IDC_STATIC,15,137,24,8
