--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -205,6 +205,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\flags.c"
+				>
+			</File>
+			<File
 				RelativePath=".\info.c"
 				>
 			</File>
@@ -275,6 +279,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\flags.h"
+				>
+			</File>
+			<File
 				RelativePath=".\info.h"
 				>
 			</File>
@@ -295,11 +303,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\opt\resource.h"
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
