ading save and restore to registry functions (and the data editor)
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@406 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -223,6 +223,14 @@
 				RelativePath=".\winproc.c"
 				>
 			</File>
+			<File
+				RelativePath=".\winreg.c"
+				>
+			</File>
+			<File
+				RelativePath=".\winxy.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
