--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -204,7 +204,7 @@ BEGIN
     CONTROL         "Break at Main",IDC_CHECK_MAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,150,59,10
     PUSHBUTTON      "Choose ...",IDC_SELECT_SPECIALS,93,36,50,14
     CONTROL         "Debug Operating System",IDC_CHECK_OS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,189,96,10
-    CONTROL         "Show Trace",IDC_CHECK_TRACE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,15,202,53,10
+    CONTROL         "Show Trace",IDC_CHECK_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,202,53,10
     CONTROL         "Trace Exceptions",IDC_CHECK_EXCEPTIONS,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,15,215,71,10
     CONTROL         "Break after instruction (classic)",IDC_RADIO_BREAK_AFTER,
                     "Button",BS_AUTORADIOBUTTON,15,163,115,10
