--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="vmbwinopt"
 	ProjectGUID="{5A384688-86B5-439D-B700-C52330851681}"
 	RootNamespace="vmbwinopt"
@@ -208,6 +208,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\winlog.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winmain.c"
 				>
 			</File>
@@ -263,6 +267,10 @@
 			</File>
 			<File
 				RelativePath=".\winde.h"
+				>
+			</File>
+			<File
+				RelativePath=".\winlog.h"
 				>
 			</File>
 			<File
