adding auto_assemble, colored trace window, fixing bug in splitter, addint tabs (not yet working) to the editor, refactored the editor.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@416 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -242,6 +242,7 @@ BEGIN
     CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,64,7,11,14
     CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,25,112,10
     CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,41,112,10
+    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,56,112,10
 END
 
 IDD_OPTIONS_EDITOR DIALOGEX 0, 0, 186, 90
@@ -445,6 +446,7 @@ BEGIN
         END
         MENUITEM "Symbol &table",               ID_VIEW_SYMBOLTABLE,MFT_STRING,MFS_ENABLED
         MENUITEM "&Breakpoints",                ID_VIEW_BREAKPOINTS,MFT_STRING,MFS_ENABLED
+        MENUITEM "Trace",                       ID_VIEW_TRACE,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "&File List",                  ID_VIEW_FILELIST,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
