--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -313,16 +313,18 @@ BEGIN
     CONTROL         "Show small values",IDC_CHECK_SMALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,37,73,10
 END
 
-IDD_OPTIONS_SOURCES DIALOGEX 0, 0, 332, 90
+IDD_OPTIONS_SOURCES DIALOGEX 0, 0, 332, 124
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Extra Sources"
+CAPTION "Sources"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,275,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,219,7,50,14
-    LISTBOX         IDC_LIST_FILES,7,24,318,59,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP,WS_EX_ACCEPTFILES
-    PUSHBUTTON      "Add ...",IDC_ADD,7,7,50,14
-    PUSHBUTTON      "Remove",IDC_REMOVE,63,7,50,14
+    DEFPUSHBUTTON   "OK",IDOK,275,25,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,275,7,50,14
+    LISTBOX         IDC_LIST_FILES,7,58,318,59,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP,WS_EX_ACCEPTFILES
+    PUSHBUTTON      "Add ...",IDC_ADD,7,41,50,14
+    PUSHBUTTON      "Remove",IDC_REMOVE,63,41,50,14
+    LTEXT           "Main application",IDC_STATIC,7,8,52,8
+    COMBOBOX        IDC_APPLICATION,64,7,199,33,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -384,7 +386,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 325
         TOPMARGIN, 7
-        BOTTOMMARGIN, 83
+        BOTTOMMARGIN, 117
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -468,12 +470,12 @@ BEGIN
     END
     POPUP "&Options",                       65535,MFT_STRING,MFS_ENABLED
     BEGIN
-        MENUITEM "Editor ...",                  ID_OPTIONS_EDITOR,MFT_STRING,MFS_ENABLED
-        MENUITEM "Assembler ...",               ID_OPTIONS_ASSEMBLER,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Editor ...",                 ID_OPTIONS_EDITOR,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Assembler ...",              ID_OPTIONS_ASSEMBLER,MFT_STRING,MFS_ENABLED
         MENUITEM "&Debug  ...",                 ID_OPTIONS_DEBUG,MFT_STRING,MFS_ENABLED
-        MENUITEM "Motherboard ...",             ID_OPTIONS_VMB,MFT_STRING,MFS_ENABLED
-        MENUITEM "Symbol table  ...",           ID_OPTIONS_SYMTAB,MFT_STRING,MFS_ENABLED
-        MENUITEM "E&xtra Sources ...",          ID_OPTIONS_SOURCES,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Motherboard ...",            ID_OPTIONS_VMB,MFT_STRING,MFS_ENABLED
+        MENUITEM "Symbol &table  ...",          ID_OPTIONS_SYMTAB,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Sources ...",                ID_OPTIONS_SOURCES,MFT_STRING,MFS_ENABLED
         POPUP "Encoding",                       65535,MFT_STRING,MFS_ENABLED
         BEGIN
             MENUITEM "ASCII",                       ID_ENCODING_ASCII,MFT_STRING,MFS_ENABLED
