--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -183,33 +183,35 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-IDD_SHOW_DEBUG DIALOGEX 0, 0, 158, 254
+IDD_SHOW_DEBUG DIALOGEX 0, 0, 307, 193
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTERMOUSE | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Debug Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,13,234,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,98,234,50,14
+    DEFPUSHBUTTON   "OK",IDOK,167,173,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,245,173,50,14
     CONTROL         "Local Registers",IDC_SHOW_LOCAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,17,64,10
-    CONTROL         "Global Registers",IDC_SHOW_GLOBAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,28,67,10
-    CONTROL         "Special Registers",IDC_SHOW_SPECIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,39,70,10
-    CONTROL         "Register Stack",IDC_SHOW_REGSTACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,17,62,10
-    CONTROL         "Text Segment",IDC_SHOW_TEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,70,61,10
-    CONTROL         "Data Segment",IDC_SHOW_DATA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,81,61,10
-    CONTROL         "Pool Segment",IDC_SHOW_POOL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,94,59,10
-    CONTROL         "Negative Segment",IDC_SHOW_NEG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,118,75,10
-    CONTROL         "Stack Segment",IDC_SHOW_STACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,105,63,10
-    GROUPBOX        "Show Registers",IDC_STATIC,9,7,142,48
-    GROUPBOX        "Show Memory",IDC_STATIC,9,59,83,72
-    CONTROL         "Break at Main",IDC_CHECK_MAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,150,59,10
-    PUSHBUTTON      "Choose ...",IDC_SELECT_SPECIALS,93,36,50,14
-    CONTROL         "Debug Operating System",IDC_CHECK_OS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,189,96,10
-    CONTROL         "Show Trace",IDC_CHECK_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,202,53,10
-    CONTROL         "Trace Exceptions",IDC_CHECK_EXCEPTIONS,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,15,215,71,10
+    CONTROL         "Global Registers",IDC_SHOW_GLOBAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,41,67,10
+    CONTROL         "Special Registers",IDC_SHOW_SPECIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,53,70,10
+    CONTROL         "Register Stack",IDC_SHOW_REGSTACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,29,62,10
+    CONTROL         "Text Segment",IDC_SHOW_TEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,17,61,10
+    CONTROL         "Data Segment",IDC_SHOW_DATA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,29,61,10
+    CONTROL         "Pool Segment",IDC_SHOW_POOL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,41,59,10
+    CONTROL         "Negative Segment",IDC_SHOW_NEG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,65,75,10
+    CONTROL         "Stack Segment",IDC_SHOW_STACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,53,63,10
+    GROUPBOX        "Show Registers",IDC_STATIC,9,7,142,73
+    GROUPBOX        "Show Memory",IDC_STATIC,161,6,135,72
+    CONTROL         "Break at Main",IDC_CHECK_MAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,119,59,10
+    PUSHBUTTON      "Choose ...",IDC_SELECT_SPECIALS,94,51,50,14
+    CONTROL         "Debug Operating System",IDC_CHECK_OS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,174,96,10
+    CONTROL         "Show Trace",IDC_CHECK_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,102,53,10
+    CONTROL         "Trace Exceptions",IDC_CHECK_EXCEPTIONS,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,17,158,71,10
     CONTROL         "Break after instruction (classic)",IDC_RADIO_BREAK_AFTER,
-                    "Button",BS_AUTORADIOBUTTON,15,163,115,10
-    CONTROL         "Break before instruction",IDC_RADIO_BREAK_BEFORE,"Button",BS_AUTORADIOBUTTON,15,176,93,10
-    CONTROL         "Auto-Close Debug Windows",IDC_CHECK_AUTOCLOSE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,15,137,105,10
+                    "Button",BS_AUTORADIOBUTTON,17,132,115,10
+    CONTROL         "Break before instruction",IDC_RADIO_BREAK_BEFORE,"Button",BS_AUTORADIOBUTTON,17,145,93,10
+    CONTROL         "Auto-Close Debug Windows",IDC_CHECK_AUTOCLOSE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,166,103,105,10
+    GROUPBOX        "Tracing",IDC_STATIC,12,90,141,97
+    CONTROL         "Warn if no application",IDC_CHECK_MISSING_APP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,167,120,85,10
 END
 
 IDD_FIND DIALOGEX 0, 0, 317, 79
@@ -338,7 +340,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_SHOW_DEBUG, DIALOG
     BEGIN
-        BOTTOMMARGIN, 248
+        RIGHTMARGIN, 158
+        BOTTOMMARGIN, 187
     END
 
     IDD_FIND, DIALOG
