--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -299,11 +299,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\opt\resource.h"
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
@@ -454,6 +454,14 @@
 			</File>
 			<File
 				RelativePath=".\Icons\stepin.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\stepout.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\stepover.ico"
 				>
 			</File>
 			<File
