reducing mmixcpu and mmixgdb to mmixlib first version (compiles)
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@423 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/mmix.vcproj
+++ b/vmb/src/mmix/mmix.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="mmix"
 	ProjectGUID="{456CB0C3-26FB-4533-A616-39D9175F8CA5}"
 	RootNamespace="mmix"
@@ -185,6 +185,10 @@
 			>
 			<File
 				RelativePath=".\arith-win.ch"
+				>
+			</File>
+			<File
+				RelativePath=".\libarith.h"
 				>
 			</File>
 			<File
