--- a/vmb/src/mmix/gmmix.vcproj
+++ b/vmb/src/mmix/gmmix.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="mmixgdb"
 	ProjectGUID="{428E0DCB-1AC5-41C7-AB33-FB3D5930BB4F}"
 	RootNamespace="gmmix"
@@ -188,22 +188,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\address.c"
-				>
-			</File>
-			<File
-				RelativePath=".\breaks.c"
-				>
-			</File>
-			<File
-				RelativePath=".\buffers.c"
-				>
-			</File>
-			<File
-				RelativePath=".\gdb.c"
-				>
-			</File>
-			<File
 				RelativePath=".\gdb.ch"
 				>
 				<FileConfiguration
@@ -230,40 +214,6 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\mmix-arith.c"
-				>
-			</File>
-			<File
-				RelativePath=".\mmix-arith.w"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						CommandLine="ctangle mmix-arith arith-win.ch mmix-arith.c&#x0D;&#x0A;"
-						AdditionalDependencies="arith-win.ch"
-						Outputs="mmix-arith.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						CommandLine="ctangle mmix-arith arith-win.ch mmix-arith.c&#x0D;&#x0A;"
-						AdditionalDependencies="arith-win.ch"
-						Outputs="mmix-arith.c"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\mmix-bus.c"
-				>
-			</File>
-			<File
 				RelativePath=".\mmix-gdb.c"
 				>
 			</File>
@@ -283,7 +233,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\remote-utils.c"
+				RelativePath=".\vmb-gdb.ch"
 				>
 			</File>
 			<File
@@ -319,15 +269,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\address.h"
-				>
-			</File>
-			<File
-				RelativePath=".\buffers.h"
-				>
-			</File>
-			<File
-				RelativePath=".\gdb.h"
+				RelativePath="..\vmbmmixlib\gdb.h"
 				>
 			</File>
 			<File
