--- a/vmb/src/winvram/winvram.vcproj
+++ b/vmb/src/winvram/winvram.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="winvram"
 	ProjectGUID="{FE9C2409-0EFD-4BF9-9F00-D917910EF3D9}"
 	RootNamespace="winvram"
@@ -202,6 +202,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\opt\resource.h"
+				>
+			</File>
 			<File
 				RelativePath=".\resource.h"
 				>
