adjusting for mmixlib changes
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@424 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -73,6 +73,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -151,6 +152,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -299,15 +301,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\scintilla\win32\resource.h"
-				>
-			</File>
-			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
 				RelativePath="..\opt\resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\scintilla\win32\resource.h"
 				>
 			</File>
 			<File
