--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -65,7 +65,7 @@ IDI_DEBUG_HALT          ICON                    "Icons\\stop.ico"
 IDI_VIEW_WHITESPACE     ICON                    "Icons\\whitespace.ico"
 IDI_DEBUG_STEPOVER      ICON                    "Icons\\stepover.ico"
 IDI_DEBUG_STEPOUT       ICON                    "Icons\\stepout.ico"
-IDI_ICON_SMALL          ICON                    "icons\\mmixidesmall.ico"
+IDI_ICON_SMALL          ICON                    "icons\\mmixide16.ico"
 IDI_BREAKX              ICON                    "Icons\\brkexec.ico"
 IDI_BREAKR              ICON                    "Icons\\brkread.ico"
 IDI_BREAKW              ICON                    "Icons\\brkwrite.ico"
