making the log window larger with a different font
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@451 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -450,6 +450,8 @@ BEGIN
     POPUP "&Help",                          65535,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
     BEGIN
         MENUITEM "&About\tF1",                  ID_HELP_ABOUT,MFT_STRING,MFS_ENABLED
+        MENUITEM "Content",                     ID_HELP_CONTENT,MFT_STRING,MFS_ENABLED
+        MENUITEM "Instructions",                ID_HELP_INSTRUCTIONS,MFT_STRING,MFS_ENABLED
     END
 END
 
