--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -73,7 +73,8 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="vmb.manifest"
+				UseUnicodeResponseFiles="false"
+				VerboseOutput="true"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -121,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../util;../opt;mmixlib;../vmbmmixlib;../splitterlib"
 				PreprocessorDefinitions="MMIXLIB;WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -139,20 +140,26 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(ConfigurationName)\mmixlib.lib Ws2_32.lib Imm32.lib comctl32.lib Htmlhelp.lib"
+				AdditionalOptions="/VERBOSE"
+				AdditionalDependencies="Ws2_32.lib Imm32.lib Htmlhelp.lib comctl32.lib"
 				LinkIncremental="1"
-				GenerateDebugInformation="true"
+				IgnoreAllDefaultLibraries="false"
+				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
+				AllowIsolation="true"
+				Profile="false"
 			/>
 			<Tool
 				Name="VCALinkTool"
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="vmb.manifest"
+				UseUnicodeResponseFiles="false"
+				VerboseOutput="true"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -301,15 +308,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\opt\resource.h"
-				>
-			</File>
-			<File
 				RelativePath="..\scintilla\win32\resource.h"
 				>
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
