--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -268,7 +268,9 @@ BEGIN
     CONTROL         "Assemble and read symbol table",IDC_CHECK_SYMBOLS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,60,119,10
     CONTROL         "Load mmo file",IDC_CHECK_LOADMMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,72,59,10
+#ifdef VMB
     CONTROL         "Create image file",IDC_CHECK_IMAGEFILE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,84,70,10
+#endif
     CONTROL         "Execute command",IDC_CHECK_EXECUTE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,96,74,10
     EDITTEXT        IDC_EDIT_COMMAND,30,109,285,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_TAB_FILES,"SysTabControl32",WS_CLIPSIBLINGS | WS_TABSTOP,7,29,318,102,WS_EX_TRANSPARENT
