--- a/vmb/src/winopt/winopt.vcproj
+++ b/vmb/src/winopt/winopt.vcproj
@@ -164,6 +164,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\option.c"
+				>
+			</File>
+			<File
+				RelativePath=".\util.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winabout.c"
 				>
 			</File>
@@ -185,10 +193,6 @@
 			</File>
 			<File
 				RelativePath=".\winmem.c"
-				>
-			</File>
-			<File
-				RelativePath=".\winpos.c"
 				>
 			</File>
 			<File
@@ -219,6 +223,10 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\util.h"
 				>
 			</File>
 			<File
