fixed register display in mmixvd
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@468 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixvd.vcproj
+++ b/vmb/src/mmixide/mmixvd.vcproj
@@ -470,6 +470,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\winopt\win32memory.rc"
+				>
+			</File>
+			<File
 				RelativePath=".\Icons\zoomin.ico"
 				>
 			</File>
